SalesmanAlgoTwo: implemented working dirty solution